--- a/workbook-1/Pay-roll-calculator/pom.xml
+++ b/workbook-1/Pay-roll-calculator/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pluralsight</groupId>
-    <artifactId>UserInputDemp</artifactId>
+    <artifactId>Pay-roll-calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
