--- a/workbook-9/exercises/northwindTraderAPI/src/main/resources/application.properties
+++ b/workbook-9/exercises/northwindTraderAPI/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=northwindTraderAPI
+db.connectionString=jdbc:mysql://localhost:3306/northwind
+db.username=root
+db.password=YUm15510n
